# data

./: .gitignore  a.py  bomba.py  d.ipynb  data.csv  main.ipynb  main.py  music.csv  pyproject.toml  updated_data.csv
homework/02/: main.py
homework/04/: main.ipynb
homework/06/: main.ipynb
homework/08/: main.ipynb
homework/10/: main.ipynb
homework/12/: customer_feedback.csv  main.ipynb
homework/14/: main.ipynb
homework/16/: main.ipynb
homework/18/: main.ipynb
homework/20/: main.ipynb
homework/22/: main.ipynb
homework/28/: data.csv  extract.py  load.py  main.ipynb  main.py  raw.json  transform.py  updated_data.csv
homework/30/: task1.py  task2.py  task3.py
homework/32/: credit_data.csv  main.ipynb
homework/34/: README.md  task1.csv  task1.py  task2.py
homework/36/: task1.py  task2.py
homework/44/: task1.py  task2.py  task3.py
homework/46/: task1.py  task2.py
homework/48/: task1.py  task2.py
homework/50/: task1.py  task2.py  task3.py  task4.py  task5.py
homework/52/: task1.py  task2.py  task3.py  task4.py  task5.py  task6.py
homework/54/: task1.py  task2.py  task3.py
homework/56/: task1.py  task2.py
homework/58/: task1.py  task2.py
homework/60/: graph_connected.json  graph_cycle.json  graph_disconnected.json  graph_scc.json  task.py
homework/62/: task.py
homework/64/: task1.py  task2.py  task3.py  task4.py
homework/capstone/: 37.ipynb  37_1.MD  37_2.MD  38.ipynb  38_6.MD  39.ipynb  39_7.MD  40.ipynb  COVID_Presentation.md  Final_COVID_Presentation.md  covid_project.ipynb
(+2 files in other folders)
