[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2026.3.0",
    "folium>=0.20.0",
    "httpx>=0.28.1",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "notebook>=7.5.5",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "seaborn>=0.13.2",
]
